# crumbs

./: .gitignore  .gitmodules  LICENSE  README.md  justfile  scifi-pots.prt.1  scifi-pots.prt.2  scifi-pots.stl
ESP32-S3-tempel/: ESP32-S3-tempel.kicad_pcb  ESP32-S3-tempel.kicad_prl  ESP32-S3-tempel.kicad_pro  ESP32-S3-tempel.kicad_sch  README.md  fp-info-cache
black-magic-103rc/: black-magic-103rc.kicad_sch
crumbs-AI-thinker-TB-03/: .gitignore  README.md
crumbs-drv8323/: README.md  crumbs-drv8323.kicad_pcb  crumbs-drv8323.kicad_prl  crumbs-drv8323.kicad_pro  crumbs-drv8323.kicad_sch  fp-lib-table  sym-lib-table
crumbs-lm5145/: README.md  crumbs-lm5145.kicad_prl  crumbs-lm5145.kicad_pro  crumbs-lm5145.kicad_sch
crumbs-rp2350a/: README.md  crumbs-rp2350a.kicad_pcb  crumbs-rp2350a.kicad_prl  crumbs-rp2350a.kicad_pro  crumbs-rp2350a.kicad_sch
crumbs2208/: README.md  crumbs-tmc2208.kicad_sch
crumbs23017/: README.md
crumbs595165/: README.md  rotaryEncoderWith595.kicad_pcb  rotaryEncoderWith595.kicad_prl  rotaryEncoderWith595.kicad_pro  rotaryEncoderWith595.kicad_sch
esp32-s3-proto-dev/: esp32-s3-proto-dev.kicad_pcb  esp32-s3-proto-dev.kicad_prl  esp32-s3-proto-dev.kicad_pro  esp32-s3-proto-dev.kicad_sch  fp-info-cache
esp32-s3-wroom-1-tempel/: ESP32-S3-tempel.kicad_pcb  ESP32-S3-tempel.kicad_prl  ESP32-S3-tempel.kicad_pro  ESP32-S3-tempel.kicad_sch  README.md  fp-lib-table  sym-lib-table
esp32-s3-wroom-1u-tempel/: ESP32-S3-tempel.kicad_pcb  ESP32-S3-tempel.kicad_prl  (+4 more)
regi/software/firmware/regi_ui/: Cargo.toml  build.rs
regi/software/firmware/regi_ui/slints/: regi.slint
temp-measurement-dongle/firmware/: .gitignore  Cargo.toml  justfile
temp-measurement-dongle/firmware/src/: display_models.rs  initializers.rs  lib.rs  models.rs  platforms.rs  stores.rs  tasks.rs
temp-measurement-dongle/firmware/src/display_models/: st7735s_modified.rs  st7789_modified.rs
temp-measurement-dongle/firmware/src/initializers/: init_devices.rs  init_display.rs  init_peripheral.rs  init_stores.rs
temp-measurement-dongle/firmware/src/models/: ble_operation_event.rs  effect.rs  enums.rs  key_event.rs
temp-measurement-dongle/firmware/src/models/enums/: tab.rs  unit.rs
temp-measurement-dongle/firmware/src/stores/: ble_option_store.rs  global_store.rs  home_store.rs  setting_store.rs
temp-measurement-dongle/firmware/src/stores/ble_option_store/: is_ble_on_handler.rs
temp-measurement-dongle/firmware/src/stores/global_store/: selected_tab_handler.rs
temp-measurement-dongle/firmware/src/stores/home_store/: is_charging_handler.rs  max31865_err_handler.rs  temperature_handler.rs
temp-measurement-dongle/firmware/src/stores/setting_store/: unit_temperature_handler.rs
temp-measurement-dongle/firmware/src/tasks/: ble_operation_task.rs  input_task.rs  max31865_task.rs  ui_task.rs
temp-measurement-dongle/firmware/tmd_ui/: Cargo.toml  build.rs
temp-measurement-dongle/firmware/tmd_ui/components/: Common.slint  HomePage.slint  Tmd.slint
temp-measurement-dongle/firmware/tmd_ui/slints/: tmd.slint
temp-measurement-dongle/firmware/tmd_ui/slints/components/: ble_option.slint  home.slint  main_content.slint  sidebar.slint  unit_setting.slint
temp-measurement-dongle/firmware/tmd_ui/slints/models/: enum_tabs.slint  enum_temperature_err.slint  enum_unit.slint  option_val.slint
temp-measurement-dongle/firmware/tmd_ui/slints/stores/: ble_option_store.slint  global_store.slint  home_slint_store.slint  setting_store.slint
(+223 files in other folders)
