[package]
edition      = "2024"
name         = "tmd"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp32s3"
path = "./src/bin/main.rs"

[features]
default = ["ble"]

ble = [
  "dep:trouble-host",
  "dep:esp-radio",
  "dep:bt-hci",
]

[dependencies]

tmd_ui = { path ="./tmd_ui" }
max31865= { path ="../../rdc/max31865" }

embassy-executor = "0.9.1"
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
embedded-hal-async = "1.0.0"
embassy-embedded-hal = "0.5.0"
esp-hal = { version = "1.0.0", features = ["defmt", "esp32s3", "unstable"] }
defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32s3"] }
critical-section = "1.2.0"
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = [
  "defmt",
  "esp32s3",
  "panic-handler",
] }
esp-rtos = { version = "0.2.0", features = ["embassy", "defmt", "esp32s3", "esp-radio"] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32s3"] }
static_cell = "2.1.1"
heapless = { version = "0.9.2", features = ["defmt"] }
mipidsi = "0.9.0"

bt-hci = { version = "0.8.0", default-features = false, optional = true, features = ["defmt", "uuid"]}
trouble-host = { version = "0.6.0", optional = true, features = [
  "derive", 
  "defmt", 
  "default-packet-pool-mtu-255", 
  "security",
  "serde"
]}
esp-radio = { version = "0.17.0", optional = true, features = ["ble", "defmt", "unstable", "esp32s3"] }
embassy-futures = "0.1.2"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
slint = { version = "1.15.1",default-features = false, features = [
  "renderer-software",
  "libm",
  "unsafe-single-threaded",
  "compat-1-2"
]}
embedded-graphics-core = {version = "0.4.1", features = ["defmt"]}
esp-storage = { version = "0.8.1", features = ["esp32s3"] }
embedded-storage-async = "0.4.1"
rand_core = {version = "0.6.0", default-features = false}
sequential-storage = {version = "7.2.0", features = ["postcard"]}
serde = {version = "1.0.228", default-features = false, features = ["derive"]}

[patch.crates-io]
trouble-host = { git = "https://github.com/embassy-rs/trouble" , rev="7b35cbdf784a838fa8fac190a5e98ac5efe661ff"}
esp-hal= { git = "https://github.com/esp-rs/esp-hal" , rev="c96f07bcd2f5a2c617a2ac538471731a76ab3e02"}
esp-radio = { git = "https://github.com/esp-rs/esp-hal" , rev="c96f07bcd2f5a2c617a2ac538471731a76ab3e02"}
esp-bootloader-esp-idf  = {git = "https://github.com/esp-rs/esp-hal" , rev="c96f07bcd2f5a2c617a2ac538471731a76ab3e02"}
esp-storage  = {git = "https://github.com/esp-rs/esp-hal" , rev="c96f07bcd2f5a2c617a2ac538471731a76ab3e02"}

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
